<resources>
    <string name="app_name">Notes App</string>
    <string name="add_note">Add Note</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="edit_note">Edit</string>
    <string name="delete_note">Delete</string>
    <string name="search_hint">Search notes</string>
    <string name="filter_by_priority">Filter by priority</string>
</resources>